<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_dynamics</name>
  <version>0.0.1</version>
  <description>Computes internal models of humanoid dynamics such as gravity compensation, balance, joint contact detection and other proprioception sense</description>
  <maintainer email="colin@flyingeinstein.com">Colin F. MacKenzie</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>humanoid_model_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>humanoid_model_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
