<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_dynamics</name>
  <version>0.0.1</version>
  <description>Computes internal models of humanoid dynamics such as gravity compensation, balance, joint contact detection and other proprioception sense</description>
  <maintainer email="colin@flyingeinstein.com">Colin F. MacKenzie</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>robot_model_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>perception_pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>srdfdom</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>robot_model_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>perception_pcl</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>srdfdom</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
